<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="left"
  >
  <FrameLayout
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent">
  	<RelativeLayout
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content">
	  	<RelativeLayout
	  		android:id="@+id/lo_sensor_info1"
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content">
	  		<TextView 
	  			android:id="@+id/sensor_name"
	  			android:text="@string/sensor_name"
	  			android:layout_alignParentLeft="true"
	  			android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:textSize="30px"/>
	  		<Button
	  			android:id="@+id/btn_sensor_select"
	  			android:text="@string/sensor_select"
	  			android:layout_alignParentRight="true"
	  			android:layout_width="150px"
	  			android:layout_height="60px"/>
	  	</RelativeLayout>
	  	<LinearLayout
	  	android:id="@+id/lo_sensor_useable"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:orientation="vertical"
  		android:layout_below="@id/lo_sensor_info1"
  		android:gravity="right">
	  		<CheckBox
	  			android:id="@+id/check_useable"
	  			android:checked="false"
	  			android:layout_gravity="center_horizontal|right"
	  			android:text="@string/sensor_usable"
	  			android:layout_width="match_parent"
	  			android:layout_height="wrap_content"
	  			android:textSize="30px"/>
	  		<LinearLayout
	  			android:layout_width="fill_parent"
	  			android:layout_height="wrap_content"
	  			android:orientation="horizontal"
	  			android:gravity="left">
	  			<TextView 
		  			android:id="@+id/tv_sensor_delay_period"
		  			android:text="@string/sensor_delay_period"
		  			android:layout_alignParentLeft="true"
		  			android:layout_width="wrap_content"
		  			android:layout_height="wrap_content"
		  			android:textSize="30px"/>
	  			<EditText
	  				android:id="@+id/et_sensor_delay_period"
	  				android:layout_width="300px"
	  				android:layout_height="70px"
	  				android:singleLine="true"/>
	  		</LinearLayout>
  			<ScrollView
	   				android:layout_width="fill_parent"
	   				android:layout_height="wrap_content">
	   			<LinearLayout
	   				android:orientation="vertical"
			   	 	android:layout_width="fill_parent"
			   	 	android:layout_height="wrap_content"
			   		android:id="@+id/resultList">
			   		<TextView
			   			android:id="@+id/txt_sensor_result"
			   			android:text="@string/sensor_result"
			   			android:layout_width="fill_parent"
			   			android:layout_height="fill_parent"
			   			android:textSize="30px"
			   			/>
			   		<TextView
			   			android:id="@+id/txt_sensor_result"
			   			android:text="1111\n1111"
			   			android:layout_width="fill_parent"
			   			android:layout_height="fill_parent"/>
			   	</LinearLayout>
			</ScrollView>
  		</LinearLayout>
  		
	</RelativeLayout>
  		
  </FrameLayout>
</LinearLayout>
